--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -150,6 +150,13 @@ h12{
     margin-left: 50px;
     display: none;
 }
+#sendingMessage{
+    // position: fixed;
+    // bottom: 0px;
+    // right: 0px;
+    // width: 180px;
+    // height: 30px;
+}
 
 ////// FOOTER AREA //////
 
