Sending message works

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -148,3 +148,11 @@ h12 {
   margin-left: 50px;
   display: none;
 }
+
+#sendingMessage {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  width: 180px;
+  height: 30px;
+}
