--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -151,11 +151,11 @@ h12{
     display: none;
 }
 #sendingMessage{
-    // position: fixed;
-    // bottom: 0px;
-    // right: 0px;
-    // width: 180px;
-    // height: 30px;
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 180px;
+    height: 30px;
 }
 
 ////// FOOTER AREA //////
