--- a/assets/css/jason.css
+++ b/assets/css/jason.css
@@ -1,6 +1,53 @@
-html, body {
-  margin: 0px;
-  padding: 0px;
-  background-color: #edf2f7;
-  font-family: Arial, Helvetica, sans-serif;
+h10 {
+  display: inline-block;
+  padding: 10px 12px;
+  background-color: #3578E5;
+  font-size: 14px;
+  max-width: 240px;
+  color: white;
+  border-bottom-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+}
+
+.Jason {
+  position: relative;
+  width: 358px;
+  margin-bottom: 20px;
+  text-align: right;
+}
+
+h11 {
+  display: inline-block;
+  padding: 10px 12px;
+  background-color: #f1f0f0;
+  font-size: 14px;
+  max-width: 240px;
+  color: #61656b;
+}
+
+h13 span {
+  color: #3578E5 !important;
+}
+
+.Lauren h11 {
+  position: relative;
+  max-width: 358px;
+  margin: 0px 0px 20px 46px;
+  border-radius: 20px;
+  text-align: left;
+}
+
+.profilePic {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background-image: url("../images/Lauren.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.Jason .profilePic {
+  display: none;
 }
