--- a/assets/css/lauren.scss
+++ b/assets/css/lauren.scss
@@ -1,8 +1,48 @@
 @import "color";
 
-html, body{
-    margin:0px;
-    padding: 0px;
-    background-color: $background;
-    font-family: Arial, Helvetica, sans-serif;  
+h11{ // Lauren is h11
+    display: inline-block;
+    padding: 10px 12px;
+    background-color: $highlight;
+    font-size: 14px;
+    max-width: 240px;
+    color:white;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+.Lauren{
+    position: relative;
+    width: 358px;
+    margin-bottom: 20px;
+    text-align: right;
+}
+// Jason Override
+h10{ // Jason is h10
+    display: inline-block;
+    padding: 10px 12px;
+    background-color: #f1f0f0;
+    font-size: 14px;
+    max-width: 240px;
+    color: #61656b;
+}
+.Jason h10 {
+    position: relative;
+    max-width: 358px;
+    margin: 0px 0px 20px 46px;
+    border-radius: 20px;
+    text-align: left;
+}
+.profilePic{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    background-image: url("../images/Jason.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.Lauren .profilePic{
+    display: none;
 }
