--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,19 @@ textarea:focus, input:focus {
   outline: none;
 }
 
+.logo {
+  position: fixed;
+  left: 50%;
+  margin-top: 110px;
+  margin-left: -300px;
+  width: 600px;
+  height: 170px;
+  background-image: url(../images/logo.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  display: block;
+}
+
 .userBtn {
   position: relative;
   width: 150px;
@@ -37,14 +50,18 @@ textarea:focus, input:focus {
   justify-content: center;
   width: 400px;
   margin: opx auto;
+  z-index: 2;
 }
 
 .main-container {
-  width: 100%;
-  height: 100vh;
+  position: absolute;
+  left: 50%;
+  top: 340px;
+  margin-left: -180px;
+  width: 360px;
+  height: 60px;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 h12 {
@@ -87,21 +104,45 @@ h13 span:hover {
   opacity: 1;
 }
 
-#overlay {
+#factBox {
   position: fixed;
-  z-index: 2;
+  width: 100%;
+  height: 30px;
+  top: 10px;
+  text-align: center;
+  font-size: 14px;
+  color: #666;
+  letter-spacing: .04em;
+}
+
+.overlay {
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: white;
-  display: none;
+  background-color: #edf2f7;
+  z-index: 3;
+  display: block;
+}
+
+.overlayActive {
+  background-image: url(../images/letter.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  z-index: 0;
+}
+
+.overlayMessage {
+  background-image: url(../images/letter.png);
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 #userID {
   position: fixed;
   top: 14px;
-  right: 14px;
+  right: 18px;
   font-size: 14px;
   width: 150px;
   height: 20px;
@@ -112,7 +153,7 @@ h13 span:hover {
   position: absolute;
   overflow: hidden;
   left: 50%;
-  top: 100px;
+  top: 80px;
   bottom: 50px;
   margin-left: -200px;
   width: 400px;
@@ -127,7 +168,7 @@ h13 span:hover {
   position: fixed;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  top: 100px;
+  top: 80px;
   left: 50%;
   margin-left: -200px;
   z-index: 1;
@@ -180,4 +221,81 @@ h13 span:hover {
   right: 0px;
   width: 180px;
   height: 30px;
+}
+
+header {
+  position: fixed;
+  left: 0;
+  right: 0;
+  height: 70px;
+  z-index: 1;
+}
+
+.move-area {
+  /*normally use body*/
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  padding: 25px calc(50% - 34px);
+  width: 100vw;
+  height: 100vh;
+}
+
+.glasses {
+  position: absolute;
+  width: 90px;
+  height: 40px;
+  left: 50%;
+  margin: 34px 0px 0px -45px;
+  background-image: url(../images/glasses.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1;
+  opacity: 1;
+}
+
+.eyes-container {
+  width: 76px;
+  padding: 6px 0px 0px 4px;
+  margin: 36px auto 0px;
+  opacity: 1;
+}
+
+.eye {
+  position: relative;
+  margin-right: 13px;
+  display: inline-block;
+  border-radius: 50%;
+  height: 26px;
+  width: 26px;
+}
+
+.eye:last-child {
+  margin-right: 0px;
+}
+
+.eye:after {
+  /*pupil*/
+  display: block;
+  position: absolute;
+  bottom: 13px;
+  right: 9px;
+  width: 9px;
+  box-sizing: border-box;
+  height: 9px;
+  background-color: #666;
+  border-radius: 50%;
+  transition: background-color .25s linear;
+  content: " ";
+}
+
+.boyColor:after {
+  background-color: #3578E5;
+}
+
+.girlColor:after {
+  background-color: #c6538c;
 }
