--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,18 @@ textarea:focus, input:focus{
     outline: none;
 }
 ////// HOME PAGE //////
+.logo{
+    position: fixed;
+    left: 50%;
+    margin-top: 110px;
+    margin-left: -300px;
+    width: 600px;
+    height: 170px;
+    background-image: url(../images/logo.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: block;
+}
 .userBtn{
     position: relative;
     width: 150px;
@@ -40,13 +52,18 @@ textarea:focus, input:focus{
     justify-content: center;
     width: 400px;
     margin: opx auto;
+    z-index: 2;
   }
 .main-container{
-    width: 100%;
-    height: 100vh;
+    position: absolute;
+    left:50%;
+    top:340px;
+    margin-left: -180px;
+    width:360px;
+    height: 60px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
 }
 ////// MESSAGE STYLE //////
 h12{
@@ -84,20 +101,41 @@ h13 span:hover{
     opacity: 1; 
   }
 ////// MAIN AREA //////
-#overlay{
+#factBox{
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  top:10px;
+  text-align: center;
+  font-size: 14px;
+  color: #666;
+  letter-spacing: .04em;  
+}
+.overlay{
     position: fixed;
-    z-index: 2;
     top:0;
     left:0;
     right:0;
     bottom:0;
-    background-color: white;
-    display: none;
+    background-color: $background;
+    z-index: 3;
+    display: block;
+}
+.overlayActive{
+    background-image: url(../images/letter.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    z-index: 0;
+}
+.overlayMessage{
+    background-image: url(../images/letter.png);
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 #userID{
     position: fixed;
     top:14px;
-    right: 14px;
+    right: 18px;
     font-size: 14px;
     width: 150px;
     height: 20px;
@@ -107,7 +145,7 @@ h13 span:hover{
     position: absolute;
     overflow: hidden;
     left:50%;
-    top:100px;
+    top:80px;
     bottom:50px;
     margin-left:-200px;
     width: 400px;
@@ -127,7 +165,7 @@ h13 span:hover{
     position: fixed;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
-    top:100px;
+    top:80px;
     left:50%;
     margin-left: -200px;
     z-index: 1;
@@ -177,6 +215,77 @@ h13 span:hover{
     width: 180px;
     height: 30px;
 }
+
+// EYES START
+header{
+    position: fixed;
+    left: 0;
+    right: 0;
+    height: 70px;
+    z-index: 1;
+}
+.move-area{/*normally use body*/
+    position: fixed;
+    left: 0;
+    right: 0;
+    top:0;
+    bottom:0;
+    box-sizing: border-box;
+    padding: 25px calc(50% - 34px);
+    width: 100vw;
+    height: 100vh;
+  }
+  .glasses{
+    position: absolute;
+    width: 90px;
+    height: 40px;
+    left: 50%;
+    margin: 34px 0px 0px -45px;
+    background-image: url(../images/glasses.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 1;
+    opacity: 1;
+}
+  .eyes-container {
+    width: 76px;
+    padding: 6px 0px 0px 4px;
+    margin: 36px auto 0px;
+    opacity: 1;
+  }
+  .eye {
+    position: relative;
+    margin-right: 13px;
+    display: inline-block;
+    border-radius: 50%;
+    height: 26px;
+    width: 26px;
+  }
+  .eye:last-child{
+    margin-right: 0px;
+  }
+  .eye:after { /*pupil*/
+    display: block;
+    position: absolute;
+    bottom: 13px;
+    right: 9px;
+    width: 9px;
+    box-sizing: border-box;
+    height: 9px;
+    background-color: #666;
+    border-radius: 50%;
+    transition: background-color .25s linear;
+    content: " ";
+  }
+  .boyColor:after{
+    background-color: $bluehighlight;
+  }
+  .girlColor:after{
+    background-color:$highlight;
+  }
+
+// EYES END
+
 
 ////// FOOTER AREA //////
 
